# system_integration_course

./: .gitignore  README.md  setup_db.bat  to_remember.md
00._Assignments/01._Data_Parser/01._Part_1/02._python/: main.py  pyproject.toml
00._Assignments/01._Data_Parser/03._Part_3/02._python/: app.py  pyproject.toml
00._Assignments/11a._auth_integration/: README.md  index.html  package-lock.json  package.json
00._Assignments/11b._integrate-payment/: README.md
00._Assignments/11b._integrate_payment/: package-lock.json  package.json
00._Assignments/13a._GraphQL/: index.js  package-lock.json  package.json  resolvers.js  schema.graphql
01._Introduction/: getgoogle.sh  paymentiframe.html
02._Text-based_Data_Formats/: me.csv  me.json  me.txt  me.xml  me.yaml
03._Modules/html_classic/: index.html
03._Modules/html_esmodules/: index.html
03._Modules/node_commonjs/: index.js  myModule.js
03._Modules/node_esmodules/: myModule.js
03._Modules/python_main/: library_importer.py  potential_library.py
03._Modules/python_modules/: main.py
04._Encode_Decode/01._node/: index.js
04._Encode_Decode/02._python/: main.py
05._Python_Virtual_Enviroments/02._pipenv/: Pipfile
05._Python_Virtual_Enviroments/03._poetry/: pyproject.toml
06._Simple_Servers/01._node/: app.js  package-lock.json
06._Simple_Servers/02._python/: main.py  pyproject.toml
08._Server-Server/01._node/: app.js  package.json
08._Server-Server/02._python/: main.py  pyproject.toml
09._Environment/02._python/: .env.sample  main.py  pyproject.toml
10._Date/01._node/: index.js
10._Date/02._python/: main.py
11._Short_Polling/01._node/: app.js  package-lock.json  package.json
12._Long_Polling/01._node/: app.js
13._Server-sent_events/01._node/: app.js  package-lock.json  package.json
14._WebSockets/01._node/: client.js  package-lock.json  package.json  server.js
14._WebSockets/02._python_plain/: client.py  pyproject.toml  server.py
14._WebSockets/03._python_fastapi/: main.py  pyproject.toml
15._OpenAPI/01._node/: app.js  package-lock.json  package.json
15._OpenAPI/02._python/: main.py  pyproject.toml
15._OpenAPI/02._python/routers/: spacecrafts_router.py
16._WebRTC/01._browser_sdp/: index.html  package-lock.json  package.json
16._WebRTC/02._webrtc_firestore/: index.html  package-lock.json
17._Database_Migrations/: Docker-compose.yml
17._Database_Migrations/01._node_knex/: index.js  knexfile.js  mydatabase_mro_docs.html  package-lock.json  package.json
17._Database_Migrations/02._python_alembic/: alembic.ini  pyproject.toml
17._Database_Migrations/02._python_alembic/alembic/versions/: a61e6cac4198_create_accounts_table_and_seed.py  ca1fdc5fdb7c_create_accounts_table.py
17._Database_Migrations/03._migration/: .env.sample  docker-compose.yml  knexfile.js  migrate.js  package-lock.json  package.json  readme.md
18._CORS/: index.html
18._CORS/01._node/: app.js  package-lock.json  package.json
18._CORS/02._python/: app.py  pyproject.toml
19._Multipart_Forms/: index.html
19._Multipart_Forms/01._node/: app.js  package-lock.json  package.json
19._Multipart_Forms/02._python/: app.py  pyproject.toml
20._Base64_Images/: index.html
21._Audio/: index.html
22._MPEG-DASH/: app.js  package.json
22._MPEG-DASH/public/: index.html
23._Embedded_Youtube/: index.html
27._Web_Scraping_Web_crawling/04._python_scrapy_basic/: pyproject.toml
27._Web_Scraping_Web_crawling/04._python_scrapy_basic/wikicrawler/wikicrawler/spiders/: WikiPageSpider.py
(+71 files in other folders)
