[project]
name = "02-python-alembic"
version = "0.1.0"
description = ""
authors = [
    {name = "Samim S.",email = "samimsaidi2660@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "sqlalchemy>=2.0.40",
    "psycopg2-binary>=2.9.10",
    "alembic (>=1.15.2,<2.0.0)"
]

[tool.poetry]
packages = [{include = "02"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
